<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        tools:context=".MainActivity">


        <Button
            android:id="@+id/zero"
            style="@style/key_style"
            android:layout_width="185dp"
            android:text="@string/_0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/eight"
            app:layout_constraintStart_toStartOf="@+id/seven"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/dot"
            style="@style/key_style"
            android:text="@string/dot"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/nine"
            app:layout_constraintStart_toStartOf="@+id/nine"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/equals"
            style="@style/button_style"
            android:text="@string/equals"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/plus"
            app:layout_constraintStart_toStartOf="@+id/plus"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/plus"
            style="@style/button_style"
            android:layout_marginBottom="4dp"
            android:text="@string/plus"
            app:layout_constraintBottom_toTopOf="@+id/equals"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/minus"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/minus"
            style="@style/button_style"
            android:layout_marginBottom="4dp"
            android:text="@string/minus"
            app:layout_constraintBottom_toTopOf="@+id/plus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/multiply"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/multiply"
            style="@style/button_style"
            android:layout_marginBottom="3dp"
            android:text="@string/multiply"
            app:layout_constraintBottom_toTopOf="@+id/minus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/divide"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/divide"
            style="@style/button_style"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="4dp"
            android:text="@string/divide"
            app:layout_constraintBottom_toTopOf="@+id/multiply"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/percent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/nine"
            style="@style/key_style"
            android:layout_marginBottom="4dp"
            android:text="@string/_9"
            app:layout_constraintBottom_toTopOf="@+id/dot"
            app:layout_constraintEnd_toEndOf="@+id/six"
            app:layout_constraintStart_toStartOf="@+id/six"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/eight"
            style="@style/key_style"
            android:layout_marginBottom="4dp"
            android:text="@string/_8"
            app:layout_constraintBottom_toTopOf="@+id/zero"
            app:layout_constraintStart_toStartOf="@+id/five"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/seven"
            style="@style/key_style"
            android:layout_marginBottom="4dp"
            android:text="@string/_7"
            app:layout_constraintBottom_toTopOf="@+id/zero"
            app:layout_constraintEnd_toEndOf="@+id/four"
            app:layout_constraintStart_toStartOf="@+id/four"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/six"
            style="@style/key_style"
            android:layout_marginBottom="4dp"
            android:text="@string/_6"
            app:layout_constraintBottom_toTopOf="@+id/nine"
            app:layout_constraintEnd_toEndOf="@+id/three"
            app:layout_constraintStart_toStartOf="@+id/three"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/five"
            style="@style/key_style"
            android:layout_marginBottom="4dp"
            android:text="@string/_5"
            app:layout_constraintBottom_toTopOf="@+id/eight"
            app:layout_constraintEnd_toEndOf="@+id/two"
            app:layout_constraintStart_toStartOf="@+id/two"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/four"
            style="@style/key_style"
            android:layout_marginBottom="4dp"
            android:text="@string/_4"
            app:layout_constraintBottom_toTopOf="@+id/seven"
            app:layout_constraintEnd_toEndOf="@+id/one"
            app:layout_constraintStart_toStartOf="@+id/one"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/three"
            style="@style/key_style"
            android:layout_marginBottom="3dp"
            android:text="@string/_3"
            app:layout_constraintBottom_toTopOf="@+id/six"
            app:layout_constraintEnd_toStartOf="@+id/divide"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/percent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/two"
            style="@style/key_style"
            android:layout_marginBottom="3dp"
            android:text="@string/_2"
            app:layout_constraintBottom_toTopOf="@+id/five"
            app:layout_constraintEnd_toEndOf="@+id/back"
            app:layout_constraintEnd_toStartOf="@+id/three"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/one"
            style="@style/key_style"
            android:layout_marginBottom="3dp"
            android:text="@string/_1"
            app:layout_constraintBottom_toTopOf="@+id/four"
            app:layout_constraintEnd_toEndOf="@+id/clear"
            app:layout_constraintStart_toStartOf="@+id/clear"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/percent"
            style="@style/button_style"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="4dp"
            android:text="@string/percent"
            app:layout_constraintBottom_toTopOf="@+id/three"
            app:layout_constraintEnd_toStartOf="@+id/divide"
            app:layout_constraintStart_toEndOf="@+id/back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/back"
            style="@style/button_style"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="4dp"
            android:text="@string/back"
            app:layout_constraintBottom_toTopOf="@+id/two"
            app:layout_constraintEnd_toStartOf="@+id/percent"
            app:layout_constraintStart_toEndOf="@+id/clear"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/clear"
            style="@style/button_style"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="4dp"
            android:text="@string/clear"
            app:layout_constraintBottom_toTopOf="@+id/one"
            app:layout_constraintEnd_toStartOf="@+id/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1" />

        <TextView
            android:id="@+id/calc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#2B2828"
            android:gravity="end"
            android:textAlignment="viewEnd"
            android:textColor="#FFFF"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/percent"
            app:layout_constraintEnd_toEndOf="@+id/divide"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/clear"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.85" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>